--- a/style.css
+++ b/style.css
@@ -2,10 +2,80 @@
 
 html, body { width:100%; height:100%; } /* just to be sure these are full screen*/
 
-canvas { 
-  background: linear-gradient(#9FF781, #F3F781);
+#canvas { 
+  background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(48,48,59,1) 59%, rgba(65,67,69,1) 99%);
   display:block; 
+  z-index:-1; 
+  position: absolute; 
+  left: 0px; 
+  top: 0px;
 } /* To remove the scrollbars */
+
+.neon {
+  color: #fff;
+  position: absolute;
+  left: 40%;
+  top: 40%;
+  opacity: 0;
+  -webkit-transition: opacity 1000ms linear;
+  transition: opacity 1000ms linear;
+  font-family: 'Varela Round', sans-serif;
+  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff00de, 0 0 70px #ff00de, 0 0 80px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de;
+}
+
+.button {
+  display:inline-block;
+  font-size:1.2em;
+  padding:1.2em 1.5em; 
+  font-family:Gill Sans, "Gill Sans", sans-serif;
+  font-weight:700;
+  letter-spacing:-1px;
+  text-transform:uppercase;
+  text-decoration:none;
+  margin:3em;
+  border:solid 2px #a45cb3;
+  color: #a45cb3;
+  border-radius:0.4em;
+  transition:all 0.3s linear;
+  animation-iteration-count: infinite;
+  cursor: pointer;
+  z-index: 2;
+  position: absolute;
+  left: 40%;
+  top: 40%;
+  opacity: 1;
+  -webkit-transition: opacity 1000ms linear;
+  transition: opacity 1000ms linear;
+}
+
+button:hover {
+  border: solid 2px #a45cb3;
+}
+
+.button1{
+  animation-duration: 0.75s;
+  animation-name: jump;
+  cursor: pointer;
+}
+
+@keyframes jump {
+  0% {
+    transform: scale(1,1) translate(0px, 0px);
+  }
+  
+  30%{
+    transform: scale(1,0.8) translate(0px, 10px); 
+  }
+
+  75%{
+    transform: scale(1,1.1) translate(0px, -25px); 
+  }
+  
+ 100% {
+    transform: scale(1,1) translate(0px, 0px);
+  }
+
+}
 
 .copy {
     position: absolute;
@@ -16,4 +86,5 @@ canvas {
     pointer-events: none;
     font-family: 'Futura', 'Helvetica Neue', Helvetica;
     color: #333;
+    z-index: 2;
 }
