--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 html, body { width:100%; height:100%; } /* just to be sure these are full screen*/
 
 #canvas { 
-  background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(48,48,59,1) 59%, rgba(65,67,69,1) 99%);
+  background: linear-gradient(180deg, rgba(34,34,34,1) 0%, rgba(34,34,34,1) 59%, rgba(34,34,34,1) 99%);;
   display:block; 
   z-index:-1; 
   position: absolute; 
